--- a/P-rmarPoesi/evenemang.html
+++ b/P-rmarPoesi/evenemang.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="books, reading, bookevent">
+    <meta name="description" content="Pärmar och Poesi, boksida för alla åldrar. Vi har det du söker efter">
+    <meta name="author" content="Daniel, Therese, Sara och Simon">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Pärmar & Poesi</title>
-    <link rel="stylesheet" href="updatestyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -20,78 +24,70 @@
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
-            <ul class="nav-list-mobile" id="navLinksMobile">
+            <div class="nav-list-mobile" id="navLinksMobile">
+                <a href="index.html">
+                    <img src="sources/logo.png" alt="Logo" class="logo">
+                  </a>
+                <ul>
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="sortiment.html">Sortiment</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
-            </ul>
+                </ul>
+            </div>
         </nav>
     </header>
 
         <main class="main-text">
-            <h1 class="welcome-text">Evenemang 2024</h1>
-        </main>
-
-
+            <h1 class="welcome-event">Evenemang 2024</h1>
 
             <article class="ebox1">
-                    <h1>28/10</h1>
-                    <h2>Bokmässan i Grönby</h2>
-
-                    <p>Litteraturens höjdpunkt i Grönby!<br/>
-                         Kom och vandra bland böcker, försvinn i ett hav av ord,<br/>
+                    <h2 class="event-date">28/10</h2>
+                    <h3 class="event-title">Bokmässan i Grönby</h3>
+                    <p class="event-p">Litteraturens höjdpunkt i Grönby!
+                         Kom och vandra bland böcker, försvinn i ett hav av ord,
                          och försök att inte fastna i en oändlig diskussion om poesi med den lokala bibliotekschefen.</p>
-                </div>
             </article>
-            <article class="ebox2">
-                <h1>3/11</h1>
-                <h2>Peter Jihde  På besök</h2>
 
-                <p>Den populära TV-profilen gästar Grönby!<br/>
-                     Kom och hör Peter Jihde dela med sig av spännande berättelser och få en inblick i hans liv bortom TV-rutan.<br/>
+            <article class="ebox2">
+                <h2 class="event-date">3/11</h2>
+                <h3 class="event-title" >Peter Jihde  På besök</h3>
+                <p class="event-p">Den populära TV-profilen gästar Grönby!
+                     Kom och hör Peter Jihde dela med sig av spännande berättelser och få en inblick i hans liv bortom TV-rutan.
                       Det blir en kväll full av intressanta samtal och kanske några överraskningar.</p>
-            </div>
             </article>
             <article class="ebox3">
-                <h1>14/11</h1>
-                <h2>Kungen På besök</h2>
-
-                <p>Vad är bättre än en kunglig närvaro?<br/>
-                     Ta chansen att träffa Kungen själv när han tar en tur till Grönby.<br/>
+                <h2 class="event-date" >14/11</h2>
+                <h3 class="event-title" >Kungen På besök</h3>
+                <p class="event-p" >Vad är bättre än en kunglig närvaro?
+                     Ta chansen att träffa Kungen själv när han tar en tur till Grönby.
                       Glöm inte att öva på ditt kungliga vink!</p>
-            </div>
             </article>
             <article class="ebox4">
-                <h1>24/11</h1>
-                <h2>Bokbytardagen i Grönby,Rödby och Blåby.</h2>
+                <h2 class="event-date" >24/11</h2>
+                <h3 class="event-title" >Bokbytardagen i Grönby,Rödby och Blåby.</h3>
 
-                <p>Förena tre byar och förvandla din bokhylla!<br/>
-                     Byt din gamla bok mot något nytt och spännande,<br/>
+                <p class="event-p" >Förena tre byar och förvandla din bokhylla!
+                     Byt din gamla bok mot något nytt och spännande,
                       men var beredd du kanske går hem med en 1000-sidors tegelsten!</p>
-            </div>
             </article>
             <article class="ebox5">
-                <h1>20/12</h1>
-                <h2>Tomten på besök</h2>
-
-                <p>Julen kommer tidigt i år!<br/>
-                     Tomten tar en paus från Nordpolen för att hälsa på i Grönby. <br/>
+                <h2 class="event-date" >20/12</h2>
+                <h3 class="event-title" >Tomten på besök</h3>
+                <p class="event-p" >Julen kommer tidigt i år!
+                     Tomten tar en paus från Nordpolen för att hälsa på i Grönby.
                       Han har kanske med sig klappar eller bara en kopp kaffe och en lång lista på snälla barn.</p>
-            </div>
             </article>
+    </main>
 
-        </section>
-
-
-            <footer>
-                <p>© Pärmar & Poesi</p>
-                <article class="footer-links">
-                    <img src="sources/facebook-app-symbol.png" alt="facebook-link">
-                    <img src="sources/instagram.png" alt="instagram-link">
-                    <img src="sources/twitter.png" alt="twitter-link">
-                    <img src="sources/threads.png" alt="twitter-link">
-                    <img src="sources/youtube.png" alt="twitter-link">
-            </article>
-            </footer>
+        <footer>
+            <p class="footer-p">© Pärmar & Poesi</p>
+            <nav class="footer-links">
+                <img src="sources/facebook-app-symbol.png" alt="facebook-link">
+                <img src="sources/instagram.png" alt="instagram-link">
+                <img src="sources/twitter.png" alt="twitter-link">
+                <img src="sources/threads.png" alt="threads-link">
+                <img src="sources/youtube.png" alt="youtube-link">
+            </nav>
+        </footer>
 </body>
 </html>
